--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- tes -->
     <h1>belajar</h1>
     <p>html</p>
+    <h2>tes</h2>
 </body>
 </html>
